Fix page height on mobile

--- a/css/menu.css
+++ b/css/menu.css
@@ -66,6 +66,7 @@ html {
 
 #grids #gridsTitle {
     text-align: center;
+    margin-top: 0px;
 }
 
 #loginError, #registerError {
